k8s/mcp-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: fh-swifty-mcp-server
  name: fh-swifty-mcp-server
  namespace: fh-swifty-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fh-swifty-mcp-server
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        io.kompose.service: fh-swifty-mcp-server
    spec:
      containers:
        - image: fh-swifty-mcp-server
          name: fh-swifty-mcp-server
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: 1Gi
              cpu: 1000m
            requests:
              memory: 256Mi
              cpu: 250m
      restartPolicy: Always
      autoMountServiceAccountToken: false
status: {}
