k8s/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: fh-swifty-chatbot
spec:
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
  selector:
    io.kompose.service: neo4j
  type: ClusterIP
status:
  loadBalancer: {}
