k8s/qdrant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  namespace: fh-swifty-chatbot
spec:
  ports:
    - name: http
      port: 6333
      targetPort: 6333
    - name: grpc
      port: 6334
      targetPort: 6334
  selector:
    io.kompose.service: qdrant
  type: ClusterIP
status:
  loadBalancer: {}
