k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fh-swifty-chatbot
  namespace: openai-proxy
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8000
  selector:
    io.kompose.service: fh-swifty-chatbot
status:
  loadBalancer: {}
