k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: fh-swifty-chatbot.fh-swf.de-frontend
  namespace: fh-swifty-chatbot
spec:
  rules:
  - host: fh-swifty-chatbot.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: fh-swifty-chatbot
            port:
              number: 80
        path: /
        pathType: Prefix 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: chatbot.fh-swf.de-frontend
  namespace: fh-swifty-chatbot
spec:
  rules:
  - host: chatbot.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: fh-swifty-mcp-server
            port:
              number: 80
        path: /
        pathType: Prefix 

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRouteTCP
# metadata:
#   name: neo4j-bolt
#   namespace: fh-swifty-chatbot
# spec:
#   entryPoints:
#     - bolt
#   routes:
#     - match: HostSNI(`*`)
#       services:
#         - name: neo4j
#           port: 7687 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: fh-swifty-mcp-server.fh-swf.de-frontend
  namespace: fh-swifty-chatbot
spec:
  rules:
  - host: fh-swifty-mcp-server.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: fh-swifty-mcp-server
            port:
              number: 80
        path: /
        pathType: Prefix 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.passHostHeader: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: neo4j-swifty-chatbot.fh-swf.de-frontend
  namespace: fh-swifty-chatbot
spec:
  rules:
  - host: neo4j-swifty-chatbot.fh-swf.cloud
    http:
      paths:
      - backend:
          service:
            name: neo4j
            port:
              number: 7474
        path: /
        pathType: Prefix
